Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -3957,6 +3957,12 @@
             "user_variable_name": null,
             "variable_name": "unk_dataframe_bd9243dabf7e422198339f00c2a74c74"
           }
+        },
+        "dx": {
+          "fieldMetadata": {},
+          "simpleTable": false,
+          "updated": 1689737339291,
+          "views": []
         }
       },
       "execution_count": null,
@@ -3973,9 +3979,12 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "6f968c1a-4feb-4675-85ac-6b1883c22906"
+          "output_collection_id": "d96e91d2-588b-4070-872d-5ed0eb72aec6"
         },
-        "ExecuteTime": null,
+        "ExecuteTime": {
+          "end_time": "2023-07-19T03:28:42.789975+00:00",
+          "start_time": "2023-07-19T03:28:42.460535+00:00"
+        },
         "datalink": {
           "d6b6bf13-11a9-4332-8b11-aa32a1e7aaec": {
             "applied_filters": [],
@@ -4020,6 +4029,52 @@
             },
             "sample_history": [],
             "sampling_time": "2023-07-19T03:28:39.368486",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          },
+          "b835f1bb-2bf8-405a-b759-b771f13d7057": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 17,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 94896,
+              "truncated_num_cols": 17,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 94896,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "b835f1bb-2bf8-405a-b759-b771f13d7057",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:28:42.609509",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
@@ -5239,7 +5294,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "886e82a7-c5ba-4a1d-9190-67dc3ef64e15"
+      "last_transaction_id": "06a739b1-9f30-4d59-bce9-8ad038e49766"
     }
   },
   "nbformat": 4,
