--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -4111,11 +4111,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "08235953-53b0-4539-bbd2-30e95b163dba"
+          "output_collection_id": "d722ccb3-57f4-4f43-b51f-f0cdce3cc60b"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:20:31.164836+00:00",
-          "start_time": "2023-07-19T03:20:30.446788+00:00"
+          "end_time": "2023-07-19T03:32:08.349549+00:00",
+          "start_time": "2023-07-19T03:32:07.584252+00:00"
         }
       },
       "execution_count": null,
@@ -4132,11 +4132,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "48dda114-5dec-4f00-ac89-c4ea4d68c2f6"
+          "output_collection_id": "13568a2c-27cf-4ed7-a973-897257a9b36d"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:20:43.442842+00:00",
-          "start_time": "2023-07-19T03:20:43.132711+00:00"
+          "end_time": "2023-07-19T03:32:14.954232+00:00",
+          "start_time": "2023-07-19T03:32:14.609196+00:00"
         },
         "datalink": {
           "e9de32a8-8401-43ea-be26-17007d402087": {
@@ -4642,6 +4642,52 @@
             },
             "sample_history": [],
             "sampling_time": "2023-07-19T03:20:43.261260",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          },
+          "395ef6ca-1390-4180-99ca-bd1684902c32": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 17,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 94896,
+              "truncated_num_cols": 17,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 94896,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "395ef6ca-1390-4180-99ca-bd1684902c32",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:32:14.768915",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
@@ -5294,7 +5340,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "7e80afa3-9248-4f55-b054-2c83acc1472b"
+      "last_transaction_id": "f8354495-337a-4a9a-986c-ae708ef50ac1"
     }
   },
   "nbformat": 4,
