Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -4725,6 +4725,22 @@
       "outputs": []
     },
     {
+      "id": "9cf87c3c-4c9f-412e-9b83-cff258abeb13",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "",
+      "outputs": []
+    },
+    {
       "id": "99ca18e4-5985-4996-95f6-6b36cd997dd7",
       "cell_type": "markdown",
       "source": "## Create New Binary Features for Select Keywords\n- New columns created for specific keywords that might appear in the 'Job Description' column.\n- Each new column represents a different keyword.\n- The value in each row is determined by whether the corresponding job description contains that keyword.",
@@ -4752,7 +4768,7 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df2['Python']=unclean_df2['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df['Excel']=unclean_df['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df['SQL']=unclean_df['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df['Tableau']=unclean_df['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df['Sparx']=unclean_df['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df['Machine Learing']=unclean_df['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df['AWS']=unclean_df['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
+      "source": "unclean_df2['Python']=unclean_df2['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df2['Excel']=unclean_df2['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df['SQL']=unclean_df['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df['Tableau']=unclean_df['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df['Sparx']=unclean_df['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df['Machine Learing']=unclean_df['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df['AWS']=unclean_df['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
       "outputs": []
     },
     {
@@ -5340,7 +5356,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "4309882a-b69b-4c80-85cc-5f7120dafa98"
+      "last_transaction_id": "e706596c-632c-4c57-b0a6-9a5ef293c6d4"
     }
   },
   "nbformat": 4,
