Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -4733,11 +4733,70 @@
           "source_hidden": false
         },
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "4540ea80-697f-4f5d-a6f1-aa4e29f21002"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-19T03:38:01.667444+00:00",
+          "start_time": "2023-07-19T03:38:01.309370+00:00"
+        },
+        "datalink": {
+          "ba0f7561-3d61-471c-ba17-6199f1384e18": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 17,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 94896,
+              "truncated_num_cols": 17,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 94896,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "ba0f7561-3d61-471c-ba17-6199f1384e18",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:38:01.477663",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
+        },
+        "dx": {
+          "fieldMetadata": {},
+          "simpleTable": true,
+          "updated": 1689737893816,
+          "views": []
         }
       },
       "execution_count": null,
-      "source": "",
+      "source": "unclean_df2",
       "outputs": []
     },
     {
@@ -5356,7 +5415,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "e706596c-632c-4c57-b0a6-9a5ef293c6d4"
+      "last_transaction_id": "74f6111a-7a67-4e2d-a910-3cd2ea75016c"
     }
   },
   "nbformat": 4,
