Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -4735,7 +4735,7 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df2['Python']=unclean_df2['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df2['Excel']=unclean_df2['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df['SQL']=unclean_df['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df['Tableau']=unclean_df['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df['Sparx']=unclean_df['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df['Machine Learing']=unclean_df['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df['AWS']=unclean_df['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
+      "source": "unclean_df2['Python']=unclean_df2['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df2['Excel']=unclean_df2['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df2['SQL']=unclean_df['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df2['Tableau']=unclean_df2['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df2['Sparx']=unclean_df2['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df2['Machine Learing']=unclean_df2['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df2['AWS']=unclean_df2['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
       "outputs": []
     },
     {
@@ -5301,6 +5301,22 @@
       "execution_count": null,
       "source": "unclean_df",
       "outputs": []
+    },
+    {
+      "id": "cb5f6d69-6675-4b57-be8b-f13d68856a74",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -5323,7 +5339,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "c2093e6c-8c8b-4a03-8726-16d74eb97671"
+      "last_transaction_id": "9736760b-84ce-4231-8858-2731bcc0a5e5"
     }
   },
   "nbformat": 4,
