--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -4727,11 +4727,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5fd5a379-6661-4896-ab63-b2a0132debe7"
+          "output_collection_id": "43f33ff7-ceb9-4a25-85e7-1ca3bea8f0dd"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:17.332224+00:00",
-          "start_time": "2023-07-19T02:37:17.065698+00:00"
+          "end_time": "2023-07-19T03:57:26.616499+00:00",
+          "start_time": "2023-07-19T03:57:26.357864+00:00"
         }
       },
       "execution_count": null,
@@ -4748,11 +4748,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "f9d717f4-f4f7-4983-98ec-af82d277d5b4"
+          "output_collection_id": "374b740b-7f65-4337-a748-62e71cc3ade6"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:17.695158+00:00",
-          "start_time": "2023-07-19T02:37:17.354153+00:00"
+          "end_time": "2023-07-19T03:57:31.406862+00:00",
+          "start_time": "2023-07-19T03:57:31.059263+00:00"
         },
         "datalink": {
           "14ce3902-4787-4527-b196-1d667eecf7db": {
@@ -5168,6 +5168,52 @@
             "sampling_time": "2023-07-19T02:37:17.510201",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "271004f0-a5c2-4d8c-b8f8-c16a6469f854": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 24,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 131800,
+              "truncated_num_cols": 24,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 131800,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "271004f0-a5c2-4d8c-b8f8-c16a6469f854",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:57:31.223124",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
@@ -5299,7 +5345,7 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df",
+      "source": "unclean_df2",
       "outputs": []
     },
     {
@@ -5339,7 +5385,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "9736760b-84ce-4231-8858-2731bcc0a5e5"
+      "last_transaction_id": "4b4d18da-b309-41cb-8ea6-b774165b21ec"
     }
   },
   "nbformat": 4,
