Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -4708,6 +4708,16 @@
       }
     },
     {
+      "id": "1a303c86-5595-49c9-9e83-efa93c810501",
+      "cell_type": "markdown",
+      "source": "",
+      "metadata": {
+        "noteable": {
+          "cell_type": "markdown"
+        }
+      }
+    },
+    {
       "id": "99ca18e4-5985-4996-95f6-6b36cd997dd7",
       "cell_type": "markdown",
       "source": "## Create New Binary Features for Select Keywords\n- New columns created for specific keywords that might appear in the 'Job Description' column.\n- Each new column represents a different keyword.\n- The value in each row is determined by whether the corresponding job description contains that keyword.",
@@ -5298,7 +5308,7 @@
             }
           },
           "simpleTable": false,
-          "updated": 1689726183410,
+          "updated": 1689739082524,
           "views": [
             {
               "annotationRules": [],
@@ -5385,7 +5395,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "4b4d18da-b309-41cb-8ea6-b774165b21ec"
+      "last_transaction_id": "51a75020-01a7-43d9-b1d2-0b887bd2db46"
     }
   },
   "nbformat": 4,
