--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -4709,13 +4709,68 @@
     },
     {
       "id": "1a303c86-5595-49c9-9e83-efa93c810501",
-      "cell_type": "markdown",
-      "source": "",
+      "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "markdown"
+          "cell_type": "python",
+          "output_collection_id": "073ae577-d4f2-4006-83b3-3d4143e542f1"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-19T03:58:52.821742+00:00",
+          "start_time": "2023-07-19T03:58:52.478809+00:00"
+        },
+        "datalink": {
+          "e2cacdb4-7ccf-40a0-989f-0c1d7291297f": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 24,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 131800,
+              "truncated_num_cols": 24,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 131800,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "e2cacdb4-7ccf-40a0-989f-0c1d7291297f",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:58:52.637766",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
         }
-      }
+      },
+      "execution_count": null,
+      "source": "unclean_df3 = unclean_df2\nunclean_df3",
+      "outputs": []
     },
     {
       "id": "99ca18e4-5985-4996-95f6-6b36cd997dd7",
@@ -5395,7 +5450,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "51a75020-01a7-43d9-b1d2-0b887bd2db46"
+      "last_transaction_id": "a5754666-3ab5-43a1-9e60-f4f9141e7c97"
     }
   },
   "nbformat": 4,
