--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,7 +6,7 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": "9822433f-9d62-4ebc-90dd-a873a8317cd0"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:36.649019+00:00",
@@ -27,7 +27,7 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": "0cba5a09-eb43-4847-b10f-7393e6112d53"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:38.555658+00:00",
@@ -788,7 +788,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "80263d6f-2e64-47f7-9904-48a6e977bda2"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:38.750946+00:00",
@@ -809,7 +809,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "a4ce315e-9600-4ca0-9989-8137df889e0f"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:39.641950+00:00",
@@ -1543,7 +1543,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "02f9e874-71fb-4f85-8e61-776b948ba588"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:39.836896+00:00",
@@ -1560,7 +1560,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "43cf7669-97a9-4ebc-97e3-5eb8da8385c8"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:40.152985+00:00",
@@ -2324,7 +2324,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "492c47c0-4e1b-4476-b09c-4269a0471c7b"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:40.328646+00:00",
@@ -2345,7 +2345,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "2a178018-7c1a-4f96-826d-226fac5ff671"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:40.495670+00:00",
@@ -2366,7 +2366,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "2064679d-b396-4920-88c5-e35dc659ed71"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:40.662990+00:00",
@@ -2387,7 +2387,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "fc89bb96-ba0e-4d20-b552-991368adc379"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:40.971445+00:00",
@@ -3112,7 +3112,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "e070ea48-73af-4aef-9799-f717c8bfef65"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:41.522272+00:00",
@@ -3378,7 +3378,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "a06cf350-5909-4114-871d-aa224c291e89"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:18:41.717217+00:00",
@@ -3979,7 +3979,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d96e91d2-588b-4070-872d-5ed0eb72aec6"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:28:42.789975+00:00",
@@ -4094,7 +4094,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "57833e99-f6db-4a9b-b359-622af5ad273f"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:32:01.334440+00:00",
@@ -4111,7 +4111,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d722ccb3-57f4-4f43-b51f-f0cdce3cc60b"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:32:08.349549+00:00",
@@ -4132,7 +4132,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "13568a2c-27cf-4ed7-a973-897257a9b36d"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:32:14.954232+00:00",
@@ -4713,7 +4713,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "073ae577-d4f2-4006-83b3-3d4143e542f1"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:58:52.821742+00:00",
@@ -4792,7 +4792,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "43f33ff7-ceb9-4a25-85e7-1ca3bea8f0dd"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:57:26.616499+00:00",
@@ -4813,7 +4813,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "374b740b-7f65-4337-a748-62e71cc3ade6"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T03:57:31.406862+00:00",
@@ -5450,7 +5450,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "a5754666-3ab5-43a1-9e60-f4f9141e7c97"
+      "last_transaction_id": "3f0e7e34-eb67-45cc-97af-6418b816ce16"
     }
   },
   "nbformat": 4,
