Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,11 +6,11 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "70527d4e-fa33-4ce3-b032-a1ab73ce35f8"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:36.649019+00:00",
-          "start_time": "2023-07-19T03:18:36.492834+00:00"
+          "end_time": "2023-07-19T04:00:34.542250+00:00",
+          "start_time": "2023-07-19T04:00:34.386258+00:00"
         }
       },
       "outputs": [],
@@ -27,11 +27,11 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "7d4dd563-175b-4f91-ae24-052d237dedaf"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:38.555658+00:00",
-          "start_time": "2023-07-19T03:18:38.278373+00:00"
+          "end_time": "2023-07-19T04:00:36.750770+00:00",
+          "start_time": "2023-07-19T04:00:36.465845+00:00"
         },
         "datalink": {
           "16f69847-5e7c-47d5-8fbc-e423d5206889": {
@@ -769,6 +769,52 @@
             "sampling_time": "2023-07-19T03:18:38.396931",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_50dcdbddb00649b18f7a3d153cd5ce9c"
+          },
+          "d1d25d63-3996-410e-9115-21eecf9c3420": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 640,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 640,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "d1d25d63-3996-410e-9115-21eecf9c3420",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:00:36.588482",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_6a8d698b16394f9f801aad4ebd816d78"
           }
         },
         "dx": {
@@ -788,11 +834,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "0a79af04-1ab8-4100-9919-8134a82e24cd"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:38.750946+00:00",
-          "start_time": "2023-07-19T03:18:38.586323+00:00"
+          "end_time": "2023-07-19T04:00:46.856568+00:00",
+          "start_time": "2023-07-19T04:00:46.687152+00:00"
         }
       },
       "execution_count": null,
@@ -809,11 +855,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "a2a40f4a-50fb-497e-b238-c0f89a2f099a"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:39.641950+00:00",
-          "start_time": "2023-07-19T03:18:39.447250+00:00"
+          "end_time": "2023-07-19T04:00:51.577781+00:00",
+          "start_time": "2023-07-19T04:00:51.384881+00:00"
         },
         "datalink": {
           "d42ff857-38ea-4219-a869-354699010ccb": {
@@ -1519,6 +1565,50 @@
             "sampling_time": "2023-07-19T03:18:39.484554",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_a2805f19d9c6497385a06052112b1843"
+          },
+          "f1a29462-6daf-475a-aec4-cbef73324bb2": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "f1a29462-6daf-475a-aec4-cbef73324bb2",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:00:51.421981",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_57fa511890e44f74aa01b811781ed13f"
           }
         },
         "dx": {
@@ -1543,11 +1633,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "a7a67f24-0eb3-4260-a000-0f8a3bef0044"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:39.836896+00:00",
-          "start_time": "2023-07-19T03:18:39.673606+00:00"
+          "end_time": "2023-07-19T04:00:55.196009+00:00",
+          "start_time": "2023-07-19T04:00:55.033183+00:00"
         }
       },
       "execution_count": null,
@@ -1560,11 +1650,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "8e0300c8-3ecc-4c8d-a272-a7e2bc2e733a"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:40.152985+00:00",
-          "start_time": "2023-07-19T03:18:39.869920+00:00"
+          "end_time": "2023-07-19T04:01:01.729849+00:00",
+          "start_time": "2023-07-19T04:01:01.470845+00:00"
         },
         "datalink": {
           "ee42736d-9639-42ca-8138-80ed5129674c": {
@@ -2210,6 +2300,98 @@
             "sampling_time": "2023-07-19T03:18:39.991935",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_c56135e164ee45f1a741c30a8a34eb83"
+          },
+          "41c9b3d2-d0c3-442a-8a15-e4ed99a014e9": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 13,
+              "orig_size_bytes": 1560,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 13,
+              "truncated_size_bytes": 1560,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "41c9b3d2-d0c3-442a-8a15-e4ed99a014e9",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:00:59.169042",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_cf9eab84d2fb47c58cb4e966e55362c5"
+          },
+          "5f4ab0f2-4f20-42f9-9a57-401dda966111": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 13,
+              "orig_size_bytes": 1560,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 13,
+              "truncated_size_bytes": 1560,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "5f4ab0f2-4f20-42f9-9a57-401dda966111",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:01:01.570655",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_9a28ac1c6a87464fbc05888cf7bf5582"
           }
         },
         "dx": {
@@ -2324,11 +2506,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "7e846e71-855c-41ef-ad40-ca0349e6ab2f"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:40.328646+00:00",
-          "start_time": "2023-07-19T03:18:40.161368+00:00"
+          "end_time": "2023-07-19T04:01:11.292263+00:00",
+          "start_time": "2023-07-19T04:01:11.128346+00:00"
         }
       },
       "execution_count": null,
@@ -5450,7 +5632,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "3f0e7e34-eb67-45cc-97af-6418b816ce16"
+      "last_transaction_id": "7f99f7fe-1848-45e2-8c5b-f576df04b214"
     }
   },
   "nbformat": 4,
