--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2506,11 +2506,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "7e846e71-855c-41ef-ad40-ca0349e6ab2f"
+          "output_collection_id": "0efd3d3e-c833-4367-93dc-f7386d0cb377"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:01:11.292263+00:00",
-          "start_time": "2023-07-19T04:01:11.128346+00:00"
+          "end_time": "2023-07-19T04:01:13.872991+00:00",
+          "start_time": "2023-07-19T04:01:13.708284+00:00"
         }
       },
       "execution_count": null,
@@ -2527,11 +2527,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "155bcc3f-7720-4960-94ec-278dd82c3ecd"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:40.495670+00:00",
-          "start_time": "2023-07-19T03:18:40.335188+00:00"
+          "end_time": "2023-07-19T04:01:26.133584+00:00",
+          "start_time": "2023-07-19T04:01:25.975382+00:00"
         }
       },
       "execution_count": null,
@@ -2548,11 +2548,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "d6ac9be4-fe7c-4222-bf28-0bb3c9e7d6ab"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:40.662990+00:00",
-          "start_time": "2023-07-19T03:18:40.504485+00:00"
+          "end_time": "2023-07-19T04:01:30.075322+00:00",
+          "start_time": "2023-07-19T04:01:29.914303+00:00"
         }
       },
       "execution_count": null,
@@ -2569,11 +2569,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "c883d5a0-83be-40ca-9468-0cf3135f88b5"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:40.971445+00:00",
-          "start_time": "2023-07-19T03:18:40.671481+00:00"
+          "end_time": "2023-07-19T04:01:33.487205+00:00",
+          "start_time": "2023-07-19T04:01:33.187511+00:00"
         },
         "datalink": {
           "b2ef382d-0457-4d28-a610-e94443bf5384": {
@@ -3265,6 +3265,52 @@
             "sampling_time": "2023-07-19T03:18:40.790808",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "02855d18-b051-4a12-a64a-e19a51075e38": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 79080,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 79080,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "02855d18-b051-4a12-a64a-e19a51075e38",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:01:33.306591",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
@@ -3294,11 +3340,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": null
+          "output_collection_id": "a49fdbf2-bc98-464e-a4ab-3955f9a87e88"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:41.522272+00:00",
-          "start_time": "2023-07-19T03:18:41.364894+00:00"
+          "end_time": "2023-07-19T04:01:38.343141+00:00",
+          "start_time": "2023-07-19T04:01:38.184722+00:00"
         },
         "datalink": {
           "77c07d07-64a0-4d80-be49-fbab97bdf598": {
@@ -5632,7 +5678,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "7f99f7fe-1848-45e2-8c5b-f576df04b214"
+      "last_transaction_id": "911680d8-f05e-4b7c-b103-59d28ae40f84"
     }
   },
   "nbformat": 4,
