--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -3606,11 +3606,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": null
+          "output_collection_id": "2ee60928-725f-4f09-b1ac-d220cacd2e45"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:41.717217+00:00",
-          "start_time": "2023-07-19T03:18:41.530005+00:00"
+          "end_time": "2023-07-19T04:01:42.682490+00:00",
+          "start_time": "2023-07-19T04:01:42.482738+00:00"
         },
         "datalink": {
           "8806e994-1e21-41c4-b843-fb15ac437a3e": {
@@ -4184,6 +4184,50 @@
             "sampling_time": "2023-07-19T03:18:41.561795",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_bd9243dabf7e422198339f00c2a74c74"
+          },
+          "e988e51f-ac89-4cc9-a9ef-01579ef4dfcc": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 30,
+              "orig_size_bytes": 480,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 30,
+              "truncated_size_bytes": 480,
+              "truncated_string_columns": []
+            },
+            "display_id": "e988e51f-ac89-4cc9-a9ef-01579ef4dfcc",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:01:42.526111",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_4a755ce1589647c68fc4631536e41a2b"
           }
         },
         "dx": {
@@ -4207,11 +4251,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "7a12421c-1206-4715-acca-639750df8ac1"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:28:42.789975+00:00",
-          "start_time": "2023-07-19T03:28:42.460535+00:00"
+          "end_time": "2023-07-19T04:01:48.296910+00:00",
+          "start_time": "2023-07-19T04:01:47.985098+00:00"
         },
         "datalink": {
           "d6b6bf13-11a9-4332-8b11-aa32a1e7aaec": {
@@ -4303,6 +4347,52 @@
             },
             "sample_history": [],
             "sampling_time": "2023-07-19T03:28:42.609509",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          },
+          "35edb698-ff27-4c9f-be22-2f3f3a55393b": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 79080,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 79080,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "35edb698-ff27-4c9f-be22-2f3f3a55393b",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:01:48.111642",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
@@ -5678,7 +5768,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "911680d8-f05e-4b7c-b103-59d28ae40f84"
+      "last_transaction_id": "0a3307bb-c007-481a-ba68-d094fca35b0b"
     }
   },
   "nbformat": 4,
