--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -4412,11 +4412,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "8d37729a-4d68-40b9-a63f-2336f7e15bbe"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:32:01.334440+00:00",
-          "start_time": "2023-07-19T03:32:01.176323+00:00"
+          "end_time": "2023-07-19T04:02:26.047362+00:00",
+          "start_time": "2023-07-19T04:02:25.891319+00:00"
         }
       },
       "execution_count": null,
@@ -4429,11 +4429,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "704e1cf0-6878-4e7e-8b19-7eb3ccac1a43"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:32:08.349549+00:00",
-          "start_time": "2023-07-19T03:32:07.584252+00:00"
+          "end_time": "2023-07-19T04:02:30.954606+00:00",
+          "start_time": "2023-07-19T04:02:30.262950+00:00"
         }
       },
       "execution_count": null,
@@ -4450,11 +4450,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "b4d48fe9-679f-4b45-8d82-6317a2b0441f"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:32:14.954232+00:00",
-          "start_time": "2023-07-19T03:32:14.609196+00:00"
+          "end_time": "2023-07-19T04:02:34.400346+00:00",
+          "start_time": "2023-07-19T04:02:34.085516+00:00"
         },
         "datalink": {
           "e9de32a8-8401-43ea-be26-17007d402087": {
@@ -5006,6 +5006,52 @@
             },
             "sample_history": [],
             "sampling_time": "2023-07-19T03:32:14.768915",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          },
+          "5e19e796-e8e6-431e-bae0-2f6f3322cdfd": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 17,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 94896,
+              "truncated_num_cols": 17,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 94896,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "5e19e796-e8e6-431e-bae0-2f6f3322cdfd",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:02:34.218627",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
@@ -5768,7 +5814,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "0a3307bb-c007-481a-ba68-d094fca35b0b"
+      "last_transaction_id": "b8977454-1af6-49bf-b35f-4e76af7525ac"
     }
   },
   "nbformat": 4,
