--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -5077,11 +5077,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": null
+          "output_collection_id": "9255ca91-b049-413d-a1f2-81c00ffdd943"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:58:52.821742+00:00",
-          "start_time": "2023-07-19T03:58:52.478809+00:00"
+          "end_time": "2023-07-19T04:02:53.802779+00:00",
+          "start_time": "2023-07-19T04:02:53.468163+00:00"
         },
         "datalink": {
           "e2cacdb4-7ccf-40a0-989f-0c1d7291297f": {
@@ -5129,6 +5129,52 @@
             "sampling_time": "2023-07-19T03:58:52.637766",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "0adccd56-c0ab-48f9-b611-d5e6c0d6f42d": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 17,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 94896,
+              "truncated_num_cols": 17,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 94896,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "0adccd56-c0ab-48f9-b611-d5e6c0d6f42d",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:02:53.621868",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         }
       },
@@ -5164,7 +5210,7 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df2['Python']=unclean_df2['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df2['Excel']=unclean_df2['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df2['SQL']=unclean_df['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df2['Tableau']=unclean_df2['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df2['Sparx']=unclean_df2['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df2['Machine Learing']=unclean_df2['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df2['AWS']=unclean_df2['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
+      "source": "unclean_df3['Python']=unclean_df3['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df2['Excel']=unclean_df2['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df2['SQL']=unclean_df['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df2['Tableau']=unclean_df2['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df2['Sparx']=unclean_df2['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df2['Machine Learing']=unclean_df2['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df2['AWS']=unclean_df2['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
       "outputs": []
     },
     {
@@ -5814,7 +5860,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "b8977454-1af6-49bf-b35f-4e76af7525ac"
+      "last_transaction_id": "54f741b7-6d69-4e99-ac3b-81de79c5c94c"
     }
   },
   "nbformat": 4,
