Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -5193,6 +5193,27 @@
       }
     },
     {
+      "id": "214fa3d1-198b-4c16-864b-020bcb4a09e7",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "fc72880c-a319-45b2-9c56-73e153424ab8"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-19T04:06:02.276586+00:00",
+          "start_time": "2023-07-19T04:06:02.120471+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df3.reset_index(drop=True, inplace=True)",
+      "outputs": []
+    },
+    {
       "id": "fa9c64d9-d61f-4c43-b701-799fff4822b6",
       "cell_type": "code",
       "metadata": {
@@ -5210,7 +5231,7 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df3['Python']=unclean_df3['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df3['Excel']=unclean_df3['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df3['SQL']=unclean_df3['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df3['Tableau']=unclean_df3['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df3['Spark']=unclean_df3['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df2['Machine Learing']=unclean_df3['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df2['AWS']=unclean_df2['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
+      "source": "unclean_df3['Python']=unclean_df3['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df3['Excel']=unclean_df3['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df3['SQL']=unclean_df3['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df3['Tableau']=unclean_df3['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df3['Spark']=unclean_df3['Job Description'].apply(lambda x: 1 if \"Spark\" in x.lower() else 0)\nunclean_df3['Machine Learing']=unclean_df3['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df3['AWS']=unclean_df3['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
       "outputs": []
     },
     {
@@ -5820,23 +5841,7 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df2",
-      "outputs": []
-    },
-    {
-      "id": "cb5f6d69-6675-4b57-be8b-f13d68856a74",
-      "cell_type": "code",
-      "metadata": {
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "noteable": {
-          "cell_type": "code"
-        }
-      },
-      "execution_count": null,
-      "source": "",
+      "source": "unclean_df3",
       "outputs": []
     }
   ],
@@ -5860,7 +5865,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "b50d47d3-f5b2-49bc-80be-f4adf540a4e7"
+      "last_transaction_id": "b0e48e60-53d5-4f4f-8370-39127e0ceb5d"
     }
   },
   "nbformat": 4,
