Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -5214,6 +5214,22 @@
       "outputs": []
     },
     {
+      "id": "e95d01d0-0de5-40c3-8f98-391dea1f3b50",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "import nltk\nfrom nltk.corpus import stopwords\nfrom nltk.stem import PorterStemmer\nimport string\n\n# Download the set of stop words the first time\nnltk.download('stopwords')\nstop_words = set(stopwords.words('english'))\n\n# Initialize a stemmer\nstemmer = PorterStemmer()\n\ndef clean_description(description):\n    # Lowercase the description\n    description = description.lower()\n    # Remove punctuation\n    description = description.translate(str.maketrans('', '', string.punctuation))\n    # Remove stop words and stem the words\n    description = ' '.join(stemmer.stem(word) for word in description.split() if word not in stop_words)\n    return description\n\n# Apply the cleaning function to each job description\nunclean_df3['Job Description'] = unclean_df3['Job Description'].apply(clean_description)\n",
+      "outputs": []
+    },
+    {
       "id": "fa9c64d9-d61f-4c43-b701-799fff4822b6",
       "cell_type": "code",
       "metadata": {
@@ -5865,7 +5881,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "b0e48e60-53d5-4f4f-8370-39127e0ceb5d"
+      "last_transaction_id": "2f5b5010-2cde-4eb8-bdf1-5257b31dc9e8"
     }
   },
   "nbformat": 4,
