Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -5885,6 +5885,23 @@
       "execution_count": null,
       "source": "unclean_df3",
       "outputs": []
+    },
+    {
+      "id": "8a0f8547-ed07-4db1-9659-602a4d3b42dc",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "8aa2005d-d547-498a-91ca-e855c6b24d4e"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-19T04:16:57.920801+00:00",
+          "start_time": "2023-07-19T04:16:52.254005+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "!pip install -q nltk",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -5907,7 +5924,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "dfa93728-c9cd-48d5-80a8-a7956e199e0e"
+      "last_transaction_id": "a293480e-600c-4158-aec5-f84161056b99"
     }
   },
   "nbformat": 4,
