--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -5265,11 +5265,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "08d1f6e6-630d-47d7-8b63-6bcf3fe9647a"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:57:26.616499+00:00",
-          "start_time": "2023-07-19T03:57:26.357864+00:00"
+          "end_time": "2023-07-19T04:18:43.106571+00:00",
+          "start_time": "2023-07-19T04:18:42.874371+00:00"
         }
       },
       "execution_count": null,
@@ -5286,11 +5286,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "0e7574ad-eca5-42ff-9970-61f9e3f31b48"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:57:31.406862+00:00",
-          "start_time": "2023-07-19T03:57:31.059263+00:00"
+          "end_time": "2023-07-19T04:18:47.435623+00:00",
+          "start_time": "2023-07-19T04:18:47.085332+00:00"
         },
         "datalink": {
           "14ce3902-4787-4527-b196-1d667eecf7db": {
@@ -5752,6 +5752,52 @@
             "sampling_time": "2023-07-19T03:57:31.223124",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "640e7c27-570c-4739-bc09-39e0b58a1ebd": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 24,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 131800,
+              "truncated_num_cols": 24,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 131800,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "640e7c27-570c-4739-bc09-39e0b58a1ebd",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:18:47.252332",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
@@ -5907,7 +5953,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "8f416d09-a15a-4b66-b25e-879b8c7f346a"
+      "last_transaction_id": "1fe53570-64f8-44b8-8a3d-a35f4c6014a2"
     }
   },
   "nbformat": 4,
